--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~ Copyright (c) 2010-2015 Lazery Attack - http://www.lazeryattack.com ~ http://www.lazerycode.com
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~  PRAVEEN REDDYPALLI
+<!-- Automation Merge to Master
+    ~  Swathi Reddy
   ~ http://www.apache.org/licenses/LICENSE-2.0
   ~
  -->
